--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
-title: Pate not found
+title: Page not found
 ---
 # Respond 404
-## Page not found ~~sob~~
+### This is my default page not found page ~~sob~~
 ```
 emoji markdown syntax is not capable to use  
 ```
